[package]
name = "hsv"
version = "0.1.0"
edition = "2024"


[dependencies]
cortex-m-rt = "0.7"
microbit-v2 = "0.16"
panic-rtt-target = "0.2"
rtt-target = "0.6"
hsv = { git = "https://github.com/pdx-cs-rust-embedded/hsv", version = "0.2.0" }
critical-section = "1.2.0"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]



